--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -1,3 +1,10 @@
 ion-content ion-toolbar {
   --background: translucent;
+  // padding: 10px;
+}
+
+#item-input ion-item {
+  // border: 1px solid #3171e0;
+
+  margin: 10px 10px;
 }
